--- a/index.html
+++ b/index.html
@@ -3,69 +3,78 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>connectsWebhook</title>
+  <title>Webhook Tester</title>
   <style>
-    body { font-family: sans-serif; padding: 20px; }
-    textarea, input, select, button { width: 100%; margin-top: 10px; padding: 8px; font-size: 14px; }
-    textarea { height: 120px; }
-    pre { background: #f0f0f0; padding: 10px; white-space: pre-wrap; margin-top: 15px; }
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    textarea, input, select, button {
+      width: 100%; margin-top: 10px; padding: 8px;
+    }
+    #responseBox {
+      white-space: pre-wrap;
+      background: #f4f4f4;
+      padding: 10px;
+      border: 1px solid #ddd;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
   <h2>Webhook Tester</h2>
-
-  <label for="method">Method:</label><br>
+  <label>Method:</label>
   <select id="method">
     <option value="GET">GET</option>
     <option value="POST">POST</option>
-  </select><br><br>
+  </select>
 
-  <label for="url">URL:</label>
-  <input type="text" id="url" placeholder="Enter full URL (https://...)"/><br><br>
+  <label>URL:</label>
+  <input type="text" id="url" placeholder="Enter full URL" />
 
-  <label for="json">JSON Body (for POST):</label>
-  <textarea id="json" placeholder='{"message": "Hello webhook!"}'></textarea>
+  <label>JSON Body (for POST):</label>
+  <textarea id="jsonBody" placeholder='{"message": "Hello webhook!"}' rows="5"></textarea>
 
   <button onclick="sendRequest()">Send Request</button>
 
   <h3>Server Response:</h3>
-  <pre id="response">Waiting for request...</pre>
+  <pre id="responseBox">Waiting for response...</pre>
 
   <script>
     async function sendRequest() {
       const method = document.getElementById('method').value;
-      const url = document.getElementById('url').value.trim();
-      const jsonBody = document.getElementById('json').value.trim();
-      const responseBox = document.getElementById('response');
+      const url = document.getElementById('url').value;
+      const jsonBody = document.getElementById('jsonBody').value;
+      const responseBox = document.getElementById('responseBox');
 
-      if (!url) {
-        responseBox.textContent = "Error: URL is required.";
-        return;
-      }
-
-      responseBox.textContent = "Sending request...";
+      responseBox.textContent = "Loading...";
 
       try {
-        const endpoint = method === "GET" 
-          ? `/fetch?url=${encodeURIComponent(url)}`
-          : `/register`;
+        let endpoint = '';
+        let options = {};
 
-        const options = {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(
-            method === "POST" 
-              ? { webhookUrl: url, ...JSON.parse(jsonBody || "{}") }
-              : {}
-          )
-        };
+        if (method === "POST") {
+          endpoint = "/register";
+          const body = JSON.parse(jsonBody);
+          options = {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(body),
+          };
+        } else {
+          endpoint = `/fetch?url=${encodeURIComponent(url)}`;
+          options = { method: "GET" };
+        }
 
         const res = await fetch(endpoint, options);
-        const data = await res.json();
+        const contentType = res.headers.get("content-type");
 
-        responseBox.textContent = JSON.stringify(data, null, 2);
-      } catch (error) {
-        responseBox.textContent = "Error: " + error.message;
+        if (contentType && contentType.includes("application/json")) {
+          const data = await res.json();
+          responseBox.textContent = JSON.stringify(data, null, 2);
+        } else {
+          const text = await res.text();
+          responseBox.textContent = text;
+        }
+      } catch (err) {
+        responseBox.textContent = "Error: " + err.message;
       }
     }
   </script>
